--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^5.0.0",
     "@mantine/hooks": "^5.0.0",
+    "@sanity/client": "^3.3.2",
+    "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.32.0",
     "next": "12.2.3",
     "react": "18.2.0",
