--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^5.0.0",
     "@mantine/hooks": "^5.0.0",
